# aggy

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  release-please-config.json  renovate.json  tsconfig.json  vite.config.ts
.vite-hooks/: commit-msg  pre-commit
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
bench/: data.js  generate.ts  run.ts
docs/: chrome-builtin-ai.md  click-to-aggregation-screen-performance.md  data-preparation-guide.md
e2e/: aggregation.spec.ts  helpers.ts  opfs.spec.ts  tsconfig.json  validation.spec.ts
scripts/: check-changelog.mjs  check-changelog.ts  no-reexport.sh  validate-tally-files.ts  validate-temotto-files.ts
src/: App.svelte  App.tsx  main.ts  main.tsx  style.css  tailwind.css
testdata/: bad_layout.json  test_data.csv  test_layout.json
tests/: aggCrossTab.test.ts  aggCrossTabEdge.test.ts  aggCrossTabOracle.test.ts  aggCrossTabPbt.test.ts  aggGrandTotal.test.ts  aggGrandTotalEdge.test.ts  aggGrandTotalOracle.test.ts  aggGrandTotalPbt.test.ts  aggNa.test.ts  aggNaCrossTabPbt.test.ts  aggNaGrandTotalPbt.test.ts  aggNaTabEdge.test.ts  aggNaTabOracle.test.ts  aggNaTabPbt.test.ts  aggTab.test.ts  aggTabEdge.test.ts  aggTabOracle.test.ts  aggTabPbt.test.ts  aggTotals.test.ts  aggTotalsEdge.test.ts  aggTotalsPbt.test.ts  aggregate.test.ts  aggregateCross.test.ts  (+20 more)
(+305 files in other folders)
