[package]
name = "aggy-desktop"
version = "0.1.0"
description = "Aggy Desktop App"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aggy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
